<resources>
    <string name="app_name">Project Rocket C</string>
    <string name="highestScore">highestScore2</string>
    <string name="highestScoreRefresh">highestScore1</string><!--swap with highestScore when needed restart score-->
    <string name="performanceIndex">dynamicPerformanceIndex</string><!--highest score log velocity-->
    <!--<string name="highestScore">highestScoreLinearSpeed</string>-->
    <string name="firstTimeOpen">firstTimeOpen</string>
    <string name="rocketIndex">rocketIndex</string>
    <string name="soundEffectsVolume">soundEffectsVolume</string>
    <string name="sound_effects_volume">sound effects volume</string>
    <string name="musicVolume">musicVolume</string>
    <string name="music_volume">music volume</string>
    <string name="tutorial">Tutorial</string>
    <string name="tap_to_restart">Tap to restart</string>
    <string name="score">SCORE</string>
    <string name="highest_score">BEST</string>
    <string name="previous_highest_score">LAST BEST</string>
    <string name="new_best">NEW BEST SCORE</string>
    <string name="finish_tutorial">Finish</string>
    <string name="add_dollar_symbol">$%d</string>
    <string name="unlockScore">%d</string>
    <string name="toUnlock">\u0020to unlock</string>
    <string name="insufficient_funds">You can\'t afford this Rocket.</string>
    <string name="flybyDeltaExplained">The amount of delta you gain by performing a flyby.\n\n
        A flyby can be performed by flying pass a planet very closed.\n\n
        It\'s harder to perform flyby for rockets with higher flyby delta.</string>
    <string name="turningSpeedExplained">How fast the rocket turn.</string>
    <string name="bought">%s bought</string>
    <string name="balance">balance</string>
    <string name="flybyDelta">\u0020\u0020flyby delta: %s</string>
    <string name="turningSpeed">turning speed: %s</string>
    <string name="numOfTimesOpened">numOfTimesOpened</string>
    <string name="noMoreRate">refuseToRate</string>
</resources>
