<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/activity_main">

    <ImageButton
        android:id="@+id/closeSettingButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/back_button"
        android:background="@android:color/transparent"
        android:onClick="closeSetting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_effects_volume"
        style="@style/MTextView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@id/soundEffectsVolumeBar"
        app:layout_constraintTop_toTopOf="@id/soundEffectsVolumeBar" />
    
    <SeekBar
        android:id="@+id/soundEffectsVolumeBar"
        style="@style/MSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_volume"
        style="@style/MTextView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@id/musicVolumeBar"
        app:layout_constraintTop_toTopOf="@id/musicVolumeBar" />
    
    <SeekBar
        android:id="@+id/musicVolumeBar"
        style="@style/MSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundEffectsVolumeBar" />
    
    <Button
        android:id="@+id/tutorialButton"
        style="@style/MButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTutorial"
        android:text="@string/tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
    