<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onCrashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="restartGameCrash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_restart"
        android:textSize="20sp"
        style="@style/MTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/previousScoreOnCrashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MTextView"
        android:textSize="40sp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/previousScoreOnCrash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/previousScoreOnCrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MTextView"
        android:textSize="47sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/highestScoreOnCrashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MTextView"
        android:textSize="26sp"
        android:text="@string/highest_score"
        app:layout_constraintBottom_toTopOf="@id/highestScoreOnCrash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/highestScoreOnCrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MTextView"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/previousScoreOnCrashTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <TextView
        android:id="@+id/gainedMoneyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/MTextView"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/settingButtonOnCrash"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="22dp"
        android:background="@drawable/image_button_background"
        android:scaleType="centerInside"
        android:src="@drawable/setting_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:onClick="openSetting"
        android:clickable="true"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/toHomeButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="23dp"
        android:background="@drawable/image_button_background"
        android:scaleType="centerInside"
        android:src="@drawable/to_home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:onClick="toHome"
        android:clickable="true"
        android:focusable="true" />
    
</androidx.constraintlayout.widget.ConstraintLayout>

